[package]
name = "census_generator"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4.0"
petgraph = "0.5.1"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"

[lib]
proc-macro = true
